Fix T47993: noise_vector ignores random seed

Replace hard coded values with offsets derived from the random seed.